# hackathons

./: .gitignore  README.md  justfile
202509_AITinkerers/: .env.example  .gitignore  README.md  RECIPE_IMAGES.md  app.py  chainlit_app.py  dedalus.py  domain.py  image_service.py  justfile  plan.md  pyproject.toml  run_chat.py  streamlit_app.py  test_image_generation.py
202509_AITinkerers/.chainlit/: config.toml
202509_AITinkerers/app/: .env.example  index.html  package-lock.json  package.json
202509_AITinkerers/app/src/: App.tsx  example.json
202509_AITinkerers/app/src/components/: DietaryPreferencesScreen.tsx  GoalsScreen.tsx  IngredientsDisplay.tsx  IngredientsPlaceholder.tsx  LandingPage.tsx  MealPlanDisplay.tsx  MealPlanGeneratingScreen.tsx  MealTypeScreen.tsx  OnboardingFlow.tsx
202509_AITinkerers/explore/: app.py  chatlit_app.py  domain.py  justfile  streamlit_stage_app.py
202509_AITinkerers/explore/domain/: __init__.py  groceries.py  models.py  parsers.py  planner.py
202509_AITinkerers/server/: .env.example  config.py  main.py  mcp_test.py  pyproject.toml
202509_AITinkerers/server/llm/: client.py
202509_AITinkerers/server/models/: meal_planning.py
202509_AITinkerers/server/routers/: buy_ingredients.py  mcp.py  meal_planning.py  sainsbury_order.py
